--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "crypto": "^1.0.1",
     "hbs": "^4.2.0",
     "jwt-decode": "^3.1.2",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
     "passport-jwt": "^4.0.0",
@@ -40,6 +41,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
