--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "start:dev": "nest start --watch"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
@@ -19,11 +20,12 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "handlebars": "^4.7.7",
     "hbs": "^4.2.0",
     "jwt-decode": "^3.1.2",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
-    "nodemailer": "^6.7.2",
+    "nodemailer": "^6.7.3",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-naver": "^1.0.6",
@@ -43,6 +45,7 @@
     "@types/jest": "27.4.0",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
