--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
+    "url": "^0.11.0",
     "webpack-cli": "^4.9.2"
   }
 }
